# vrc-get

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .something-releaser.toml  CHANGELOG-gui.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  crowdin.yml  flake.nix  repositories.txt  rust-toolchain.toml  test.applescript  update-deps.sh
build-check-static-link/: Cargo.toml  README.md
build-check-static-link/src/: main.rs
build-updater-json/: Cargo.toml
build-updater-json/src/: main.rs
vrc-get/: Cargo.toml  build.rs  build_target_info.rs
vrc-get-gui/: .editorconfig  .gitignore  .npmrc  .taurignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Info.plist  README.md  THIRD-PARTY.md  Tauri.toml  about.toml  alcom.desktop  app-icon.afdesign  biome.jsonc  build.d.ts  build.rs  build_target_info.rs  components.json  icon-LICENSE  index.html  install-vcc-protocol.bat  installer.iss  installer.nsi  json5.d.ts  next.config.mjs  notes-beta.txt  notes.txt  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite-env.d.ts  vite.config.ts
vrc-get-gui-gpui/: Cargo.toml  README.md
vrc-get-gui-gpui/src/: backend.rs  main.rs
vrc-get-gui-runtime/: Cargo.toml
vrc-get-gui-runtime/src/: lib.rs
vrc-get-gui/app/: -error.tsx  -loading.tsx  __root.tsx  error.tsx  fonts.ts  globals.css  layout.tsx  loading.tsx  route.tsx
vrc-get-gui/app/(main)/: layout.tsx
vrc-get-gui/app/(setup)/: layout.tsx
vrc-get-gui/app/_main/: route.tsx
vrc-get-gui/app/_setup/: route.tsx
vrc-get-gui/app/log/: page.tsx
vrc-get-gui/app/projects/: create-project.tsx  page.tsx  project-row.tsx
vrc-get-gui/app/repositories/: page.tsx  use-import-repositories.tsx
vrc-get-gui/app/settings/: page.tsx
vrc-get-gui/booth/: .gitignore  Makefile  README.en.txt  README.ja.txt  README.md  booth-description.md  embeder.mjs  package-lock.json  package.json  sharp-convert.js  website.url
vrc-get-gui/bundle/: Info.plist  alcom.desktop  alcom.spec  deb-control  dmg-background.tiff  windows-setup.iss
vrc-get-gui/bundle/appimage/: AppRun
vrc-get-gui/bundle/debian/: .gitignore  README.Debian  README.source  changelog  clean  control  copyright  rules  watch
vrc-get-gui/components/: BackupProjectDialog.tsx  CheckForUpdateMessage.tsx  ConfirmDialog.tsx  CrowdinInContext.tsx  DelayedButton.tsx  ExternalLink.tsx  FavoriteStarButton.tsx  InputNoLabel.tsx  OpenUnityButton.tsx  Overlay.tsx  PackageMultiSelect.tsx  RemoveProjectDialog.tsx  ReorderableList.tsx  ScrollPageContainer.tsx  ScrollableCard.tsx  ScrollableCardTable.tsx  SearchBox.tsx  SetProjectDisplayNameDialog.tsx  SideBar.tsx  Table.tsx  TemplateSelect.tsx  TooltipButton.tsx  UnityRunningIndicator.tsx  VGTrans.tsx  common-setting-parts.tsx  layout.tsx  providers.tsx  select.tsx  unity-arguments-settings.tsx  unity-selector-dialog.tsx
vrc-get-gui/components/ui/: accordion.tsx  autocomplete.tsx  button.tsx  card.tsx  checkbox.tsx  combobox.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  popover.tsx  progress.tsx  radio-group.tsx  scroll-area.tsx  select.tsx  separator.tsx  tooltip.tsx
vrc-get-gui/icons/: icon.icns
vrc-get-gui/lib/: assert-never.ts  backup-project.tsx  bindings.ts  call-async-command.ts  constants.ts  dateToString.ts  dialog.tsx  errors.ts  events.ts  global-events.ts  global-info.ts  i18n.ts  import-templates.tsx  licenses.ts  main.tsx  migration-with-2022.ts  open-unity.ts  open-unity.tsx  operation-in-progress.ts  os.ts  polyfill.ts  prev-page.ts  project-name-check.tsx  project-template.ts  project-update.ts  remove-project.tsx  routeTree.gen.ts  shellOpen.ts  toast.ts  toastThrownError.ts  unsupported.ts  use-effect-event.ts  use-file-picker-dialog.tsx  use-open-unity.tsx  use-tauri-listen.ts  use-unity-selector-dialog.tsx  use-unity-status.ts  useSessionStorage.ts  utils.ts  version.ts
vrc-get-gui/locales/: ach_UG.json  de.json  de.json5  en.json  en.json5  fr.json  fr.json5  ja.json  ja.json5  ko.json5  zh_cn.json  zh_cn.json5  zh_hans.json5  zh_hant.json5
vrc-get-gui/project-templates/: .editorconfig  .gitattributes  list.txt
vrc-get-gui/public/: crowdin-in-context.js
vrc-get-gui/scripts/: build-license-json.mjs  build.d.ts  i18next-to-rust-i18n.mjs  vite-build-license-json.ts
vrc-get-gui/src/: cmd_start.rs  cmd_start_basic.rs  cmd_start_win.rs  commands.rs  compressor.rs  config.rs  deep_link_support.rs  logging.rs  main.rs  os_linux.rs  os_macos.rs  os_posix.rs  os_windows.rs  specta.rs  state.rs  templates.rs  updater.rs  utils.rs
vrc-get-gui/src/commands/: async_command.rs  environment.rs  project.rs  start.rs  (+3 more)
vrc-get-gui/templates/: .gitignore  README.md  list.txt  templates.json
vrc-get-gui/web/: .gitignore  .taurignore  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
vrc-get-gui/windows-installer-wrapper/: Cargo.toml  build.rs
vrc-get-litedb/: CONTRIBUTING.md  Cargo.toml  README.md  build.rs  build_target_info.rs  keep_modules_section.c  vcc.liteDb
vrc-get-litedb/dotnet/: .gitignore  Directory.Build.props  ILLink.Substitutions.xml  vrc-get-litedb.csproj  vrc-get-litedb.sln
vrc-get-litedb/src/: bootstrapper.rs  bson.rs  connection.rs  connection_string.rs  error.rs  ffitemp.rs  lib.rs  lowlevel.rs  main.rs  project.rs  unity_version.rs
vrc-get-litedb/test-resources/: vcc.liteDb
vrc-get-vpm/: CHANGELOG-VPM.md  Cargo.toml  README.md
vrc-get-vpm/src/: add_package.rs  environment.rs  io.rs  lib.rs  package_json.rs  package_json_like.rs  package_manifest.rs  package_resolution.rs  repo_holder.rs  repositories_file.rs  structs.rs  traits.rs  unity.rs  unity_hub.rs  unity_project.rs  utils.rs  version_selector.rs
vrc-get-vpm/tests/: add_package_to_project.rs  environment_migration.rs  reading_project.rs  remove_package.rs  resolve_project.rs  vfs_test.rs
vrc-get/src/: commands.rs  main.rs
xtask/: Cargo.toml
xtask/src/: alcom_updater_json.rs  build_alcom.rs  build_alcom_installer.rs  bundle_alcom.rs  check_static_link.rs  main.rs  sign_alcom.rs  sign_alcom_updater.rs  utils.rs
(+267 files in other folders)
