[workspace]
resolver = "2"

members = [
    "build-check-static-link",
    "build-updater-json",
    "vrc-get",
    "vrc-get-gui",
    "vrc-get-vpm",
]

# "vrc-get-gui" is excluded since "vrc-get-gui" requires complex tauri configuration
# "build-check-static-link" is excluded since "build-check-static-link" is not a part of the main project, a utility for project
default-members = [
    "vrc-get",
    "vrc-get-vpm",
]

[workspace.package]
edition = "2024"

license = "MIT"
authors = ["anatawa12 <anatawa12@icloud.com>"]
homepage = "https://github.com/anatawa12/vrc-get#readme"
repository = "https://github.com/anatawa12/vrc-get"
readme = "README.md"
