[workspace]
resolver = "2"

members = [
    "xtask",
    "vrc-get",
    "vrc-get-gui",
    "vrc-get-gui-gpui",
    "vrc-get-gui-runtime",
    "vrc-get-gui/windows-installer-wrapper",
    "vrc-get-vpm",
]

# "vrc-get-gui" is excluded since "vrc-get-gui" requires complex tauri configuration
# "build-check-static-link" is excluded since "build-check-static-link" is not a part of the main project, a utility for project
default-members = [
    "vrc-get",
    "vrc-get-vpm",
]

[workspace.package]
edition = "2024"

license = "MIT"
authors = ["anatawa12 <anatawa12@icloud.com>"]
homepage = "https://github.com/anatawa12/vrc-get#readme"
repository = "https://github.com/anatawa12/vrc-get"
readme = "README.md"

[profile.xtask]
inherits = "dev"
incremental = false
debug = 1
opt-level = 0
lto = "off"

[patch.crates-io]
gpui = { git = "https://github.com/zed-industries/zed.git", rev = "69e2130295c2649963eb639fc70b4f2ee8ea1624", package = "gpui" }
