[package]
name = "vrc-get-gui-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["time"] }
