[package]
name = "vrc-get-litedb"
version = "0.1.4"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
description = "A NativeAOT LiteDB wrapper to read VCC's project information made for vrc-get."
keywords = ["vpm", "package-manager", "vrc-get"]
categories = ["database"]

include = [
    "/src/**/*",
    "/dotnet/vrc-get-litedb.csproj",
    "/dotnet/Directory.Build.props",
    "/dotnet/src/**/*",
    "/dotnet/LiteDB/LiteDB/**/*",
    "!/dotnet/LiteDB/LiteDB/bin/**/*",
    "!/dotnet/LiteDB/LiteDB/obj/**/*",
    "/Cargo.toml",
    "/*.rs",
    "README.md",
    "LICENSE",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
once_cell = "1.19.0"
rand = "0.8.5"

[build-dependencies]
ar = "0.9.0"
object = { version = "0.34.0", default-features = false, features = ["macho"] }
