[package]
name = "vrc-get-vpm"

# discreate versioning since this library will not have stable versions
version = "0.0.13-beta.0"

edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

description = "Open Source client of VRChat Package Manager. This is the library is made for vrc-get."
readme = "README.md"
keywords = ["vpm", "package-manager"]
categories = ["command-line-utilities"]

[dependencies]
async-stream = "0.3.5"
async_zip = { version = "0.0.17", features = ["deflate", "tokio", "deflate64"] }
either = "1.12.0"
futures = "0.3.30"
hex = "0.4.3"
indexmap = { version = "2.2.6", features = ["serde"] }
itertools = "0.13.0"
log = "0.4.21"
pin-project-lite = "0.2.14"
reqwest = { version = "0.12.4", features = ["stream"], default-features = false }
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde_json = { version = "1.0.116", features = ["preserve_order"] }
sha2 = "0.10.8"
tokio-util = "0.7.11"
url = { version = "2.5.1", features = ["serde"] }
uuid = { version = "1.9.0", features = ["v4"] }
lazy_static = "1.4.0"
enum-map = "2.7.3"

vrc-get-litedb = { version = "0.2.1", optional = true }
tokio = { version = "1.38.0", features = ["fs", "process"], optional = true }
serde_path_to_error = "0.1.16"
serde-value = "0.7.0"
bson = "2.11.0"
serde_repr = "0.1.19"

[target."cfg(windows)".dependencies]
dirs-sys = "0.4.1"
winreg = { version = "0.52.0", optional = true }

[features]
default = ["rustls"]
native-tls = ["reqwest/native-tls-vendored"]
rustls = ["reqwest/rustls-tls-native-roots"]

unity-hub = ["tokio"]
unity = ["tokio"]

experimental-project-management = ["vrc-get-litedb", 'unity-hub', 'unity']
experimental-unity-management = ["vrc-get-litedb", 'dep:winreg']
