[package]
name = "vrc-get-vpm"

# discreate versioning since this library will not have stable versions
version = "0.0.16-beta.0"

edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

description = "Open Source client of VRChat Package Manager. This is the library is made for vrc-get."
readme = "README.md"
keywords = ["vpm", "package-manager"]
categories = ["command-line-utilities"]

[dependencies]
async-stream = "0.3"
async_zip = { version = "0.0.18", features = ["deflate", "tokio", "deflate64"] }
either = { version = "1", features = ["serde"] }
futures = "0.3"
hex = "0.4"
indexmap = { version = "2", features = ["serde"] }
itertools = "0.14"
log = { version = "0.4", features = ['kv'] }
pin-project-lite = "0.2"
reqwest = { version = "0.12", features = ["stream"], default-features = false }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
tokio-util = "0.7"
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
lazy_static = "1"
enum-map = "2"

vrc-get-litedb = { version = "0.3.0-beta.7", optional = true, default-features = false, features = [
    'shared-mutex',
] }
tokio = { version = "1", features = ["fs", "process"] }
serde_path_to_error = "0.1"
serde-value = "0.7"
serde_repr = "0.1"
sha1 = "0.10"

[target."cfg(windows)".dependencies]
dirs-sys = "0.5"
winreg = { version = "0.55", optional = true }
windows = { version = "0.61", features = ["Win32_System_Threading", "Win32_Security"] }

[target."cfg(target_os = \"macos\")".dependencies]
plist = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = ["rustls"]
native-tls = ["reqwest/native-tls-vendored"]
rustls = ["reqwest/rustls-tls-native-roots"]

unity-hub = ["dep:plist", "windows/Win32_Storage_FileSystem"]
unity = []

experimental-project-management = ["vrc-get-litedb", 'unity-hub', 'unity']
experimental-unity-management = ["vrc-get-litedb", 'dep:winreg']
