[package]
name = "vrc-get"
version = "1.5.3-beta.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

description = "Open Source command line client of VRChat Package Manager."
readme = "README.md"
keywords = ["vpm", "package-manager"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
clap_complete = "4.4.6"
color-print = "0.3.5"
env_logger = "0.11.0"
indexmap = { version = "2.2.1", features = ["serde"] }
itertools = "0.12.0"
log = "0.4.20"
reqwest = { version = "0.11.23", default-features = false }
serde = { version = "1.0.195", features = ["derive", "rc"] }
serde_json = { version = "1.0.111", features = ["preserve_order"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "fs"] }
vrc-get-vpm = { version = "0.0.6-beta.0", path = "../vrc-get-vpm", default-features = false }

[features]
default = ["rustls"]
native-tls = ["vrc-get-vpm/native-tls"]
rustls = ["vrc-get-vpm/rustls"]

experimental-override-predefined = ["vrc-get-vpm/experimental-override-predefined"]
experimental-yank = ["vrc-get-vpm/experimental-yank"]

# binstall support
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ target }-{ name }{ binary-ext }"
pkg-fmt = "bin"
