[package]
name = "vrc-get"
version = "1.6.0-beta.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

description = "Open Source command line client of VRChat Package Manager."
readme = "README.md"
keywords = ["vpm", "package-manager"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
clap_complete = "4.4.10"
color-print = "0.3.5"
env_logger = "0.11.1"
indexmap = { version = "2.2.3", features = ["serde"] }
itertools = "0.12.1"
log = "0.4.20"
reqwest = { version = "0.11.24", default-features = false }
serde = { version = "1.0.196", features = ["derive", "rc"] }
serde_json = { version = "1.0.113", features = ["preserve_order"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "fs"] }

[dependencies.vrc-get-vpm]
version = "0.0.7-beta.2"
path = "../vrc-get-vpm"
features = ["tokio"]
default-features = false

[build-dependencies]
home = "0.5.9"

[features]
default = ["rustls"]
native-tls = ["vrc-get-vpm/native-tls"]
rustls = ["vrc-get-vpm/rustls"]

experimental-vcc = ["vrc-get-vpm/experimental-project-management", "vrc-get-vpm/experimental-unity-management"]
experimental-yank = ["vrc-get-vpm/experimental-yank"]

# binstall support
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ target }-{ name }{ binary-ext }"
pkg-fmt = "bin"
