[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
cargo_metadata = "0.23.1"
clap = { version = "4.6.0", features = ["derive"] }
itertools = "0.14.0"
object = "0.38.1"
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
indexmap = { version = "2.13.0", features = ["serde"] }
serde_json = "1.0.149"
ureq = "3.3.0"
toml = "0.8.22"
flate2 = "1.1.1"
tar = "0.4.43"
plist = "1.8.0"
rpm = { version = "0.20.0", default-features = false, features = ["gzip-compression"] }
ar = "0.9.0"
fs_extra = "1.3.0"
